--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "vue3-tailwindcss",
-  "version": "0.1.0",
-  "private": true,
+  "name": "tw",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.16.4",
-    "vue": "^3.0.0"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "@iconify/vue": "^3.0.0",
-    "@vue/cli-service": "~4.5.13",
-    "@vue/compiler-sfc": "^3.2.6",
-    "sass": "^1.39.0",
-    "sass-loader": "10",
-    "vue-cli-plugin-windicss": "~1.0.4"
+    "vite": "^2.3.8"
+  },
+  "dependencies": {
+    "@tailwindcss/jit": "^0.1.18",
+    "autoprefixer": "^10.2.6",
+    "path": "^0.12.7",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.2"
   }
 }
